--- a/templates/create.html
+++ b/templates/create.html
@@ -5,26 +5,7 @@
     <hr>
     <span class="title"><h1>{% block title %} Create Classroom {% endblock %}</h1></span>
     <hr>
-    <div class="d-flex justify-content-center text-black mt-2">
-        <form method="post">
-        <div class="form-floating mb-3">
-            <input type="text" name="name" class="form-control" id="floatingInput" 
-            placeholder="Name">
-            <label for="floatingInput">Name</label>
-        </div>
-        <div class="form-floating mb-3">
-            <input type="text" name="yearlevel" class="form-control" id="floatingInput" 
-            placeholder="Level">
-            <label for="floatingInput">Year Level</label>
-        </div>
-        <div class="form-floating mb-3">
-            <input type="number" name="capacity" class="form-control" id="floatingInput" 
-            placeholder="Capacity">
-            <label for="floatingInput">Student Capacity</label>
-        </div>
-        <p><button class="btn btn-primary" type="submit">Submit</button></p>
-        </form>
-    </div>
+        <!-- PUT YOUR FORM HERE -->
     <hr>
     <h5 class="title is-5">Fill in the Form above!</h5>
 
