--- a/templates/authentication/signup.html
+++ b/templates/authentication/signup.html
@@ -1,53 +1,43 @@
 {% extends "base.html" %}
 
 {% block content %}
-<div class="d-flex justify-content-center bg-dark" style="height: 1000px;">
+<div class="container-fluid bg-light d-flex flex-column justify-content-center" style="height: 100vh; width: 100vw; padding: 5vw; padding-top: 15vh;">
+    
+  <div class="box d-flex justify-content-center">
+      {% with messages = get_flashed_messages() %}
+        {% if messages %}
+          <div class="alert alert-danger">
+            {{ messages[0] }}</a>
+          </div>
+        {% endif %}
+      {% endwith %}
+  </div>
 
-    <div class="d-flex flex-column bg-light" style="margin-top: 200px; height: 500px; padding: 20px;">
+  <div class="container-fluid border rounded shadow-sm" style="max-width: 500px; max-height: 430px;">
 
-        <h1>Sign Up</h1>
+      <main class="form-signin m-auto" style="padding: 25px; max-width: 500px;">
+          <form method="post">
+              <h1 class="h3 mb-3 fw-normal">Sign Up</h1>
+              
+              <div class="form-floating mt-3">
+                  <input type="username" name="username" class="form-control" id="floatingInput" placeholder="Username">
+                  <label for="floatingInput">Username</label>
+              </div>
 
-        <div class="row g-3 align-items-center">
-            <div class="col-auto">
-              <label for="inputUsername6" class="col-form-label">Username</label>
-            </div>
-            <div class="col-auto">
-              <input type="Username" id="inputUsername6" class="form-control" aria-describedby="UsernameHelpInline">
-            </div>
-            <div class="col-auto">
-              <span id="UsernameHelpInline" class="form-text">
-                Must be 4-20 characters long.
-              </span>
-            </div>
-        </div>
+              <div class="form-floating mt-3">
+                  <input type="email" name="email" class="form-control" id="floatingInput" placeholder="name@example.com">
+                  <label for="floatingInput">Email address</label>
+              </div>
 
-        <div class="row g-3 align-items-center">
-            <div class="col-auto">
-              <label for="inputEmail6" class="col-form-label">Email</label>
-            </div>
-            <div class="col-auto">
-              <input type="Email" id="inputEmail6" class="form-control" aria-describedby="EmailHelpInline">
-            </div>
-            <div class="col-auto">
-              <span id="EmailHelpInline" class="form-text">
-                Must contain @ as a proper email.
-              </span>
-            </div>
-        </div>
+              <div class="form-floating mt-3">
+                  <input type="password" name="password" class="form-control" id="floatingPassword" placeholder="Password">
+                  <label for="floatingPassword">Password</label>
+              </div>
 
-        <div class="row g-3 align-items-center">
-            <div class="col-auto">
-              <label for="inputPassword6" class="col-form-label">Password</label>
-            </div>
-            <div class="col-auto">
-              <input type="password" id="inputPassword6" class="form-control" aria-describedby="passwordHelpInline">
-            </div>
-            <div class="col-auto">
-              <span id="passwordHelpInline" class="form-text">
-                Must be 8-20 characters long.
-              </span>
-            </div>
-        </div>
-    </div>
+              <button class="btn btn-primary btn-lg mt-4 w-100 py-2" type="submit">Sign Up</button>
+          </form>
+      </main>
+  
+  </div>
 </div>
 {% endblock %}
